# Hydrogen-Molecule-VQMC

Sequential/: CMakeLists.txt  README.md
Sequential/include/: Metropolis.h  newton.h
Sequential/include/H2/: constants.h  wavefunction.h
Sequential/scripts/: main.cxx
Sequential/src/: Vector3D.cxx  wavefunction.cxx
Serial/: VisualizationsCMakeLists.txt
Serial/include/: Vector3D.h
Serial/src/: AcceptanceProbability.cxx  Metropolis.cxx  constants.cxx  newton.cxx
